<resources>
    <string name="app_name">KotlinAndroidTalk</string>
    <string name="access_code">Access code</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fac_digits">10 Digit Withdrawal Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="amount">Amount</string>
    <string name="add_transaction">+Add another transaction</string>
    <string name="submit">Submit</string>
    <string name="account_no">Account No</string>
    <string name="remarks">Remarks</string>
    <string name="bank">Bank</string>
    <string name="confirm">Confirm</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="user_id">Service User ID</string>
    <string name="service_password">Service Password</string>
    <string name="agent_id">Agent ID</string>
    <string name="terminal_id">Terminal ID</string>
    <string name="title_activity_home">GTBank</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Input Amount KeyBoard-->
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="please_input_amount">Please Input Amount</string>
    <string name="please_select_purchase_type">Select Purchase Type</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_with_cb">Purchase With Cashback</string>
    <string name="pay_with_card">Pay With Bank Card</string>
    <string name="please_select_payment_type">Please select a payment method</string>
    <string name="pay_with_qr">Scan QR Code</string>
    <string name="return_home">Return Home</string>
    <string name="transaction_successful">Transaction Successful</string>
    <string name="please_collect_your_print_out">Please collect your print out</string>
    <string name="card_reprint">Reprint Card Transactions</string>
    <string name="select_reprint_type">Select Reprint Type</string>
    <string name="cashout_reprint">Reprint Cashout Transactions</string>
    <string name="transfer_reprint">Reprint Transfer Transactions</string>
    <string name="select_transfer_reprint_type">Select Transfer Reprint Type</string>
    <string name="select_bills_reprint_type">Select Bills Reprint Type</string>
    <string name="reprint_reference">Reprint Using Reference</string>
    <string name="reprint_last">Reprint Last</string>
    <string name="reprint_eod">Print EOD</string>
    <string name="reprint_eod_all">Reprint Eod All</string>
    <string name="select_cashout_reprint_type">Select Transfer Cashout Type</string>
    <string name="enter_password">Enter Password</string>
    <string name="set_admin_password">Set Admin Password</string>
    <string name="set_password">Set Password</string>
    <string name="set_transfer_auth">Set Transfer Credentials</string>
    <string name="set_cashout_auth">Set Cashout Credentials</string>
    <string name="do_keyexchange">KeyExchange</string>
    <string name="old_password">Enter Old Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="set_password_reprint">Set Reprint Password</string>
    <string name="transfer">Transfer</string>
    <string name="cashout">Cashout</string>
    <string name="set_cashout_password">Set GAPS Password</string>
    <string name="please_select_requery_type">Select Requery Type</string>
    <string name="requery_reference">Requery With Reference ID</string>
    <string name="requery_list">View Pending Transfers</string>
    <string name="requery">Requery Transfers</string>
    <string name="initialize_terminal">Initialize Terminal</string>
    <string name="transfer_bill">Reprint BIlls Transactions</string>
    <string name="set_password_bills">Set Bills Payment Passsword</string>
    <string name="app_logo">App Logo</string>
    <string name="airtime_data"><![CDATA[Airtime & \nData]]></string>
    <string name="cardless_withdrawal">Cardless  \nWithdrawal</string>
    <string name="pay_bills">Pay Bills</string>
    <string name="card_withdrawal">Card \nWithdrawal</string>
    <string name="betting_gaming"><![CDATA[Betting & \nGaming]]></string>
    <string name="reprint">Reprint</string>
    <string name="settings">Settings</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="how_would_you_like_to_transfer">How Would You Like To Transfer?</string>

</resources>
